--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,28 +1,41 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <p class="lead">Explore new places</p>
   </div>
 </header>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+<div class="container" id="locations">
+  <div>
+    <h1>Find a place near you</h1>
+    <input ng-model="location"></input>
+    <button class="btn btn-danger" ng-click="findLocations(location)">Search</button>
+  </div>
+
+  <div class="loading" ng-show="isLoading"><i class="fa fa-spinner fa-pulse"></i></div>
+
+  <div id="test">
+    <div class="col-md-4" ng-repeat="location in listOfLocations">       
+      <div id="location" ng-click="locationDetails(location)">
+        <h4>{{location.name}}</h4>
+        <a href="{{location.url}}"><img src="{{location.image_url}}"></img></a>
+      </div>
     </div>
   </div>
 </div>
 
+<!-- <div ng-repeat="product in products" ng-if="$index % 3 == 0" class="row">
+    <div class="col-xs-4">{{products[$index]}}</div>
+    <div class="col-xs-4">{{products[$index + 1]}}</div>
+    <div class="col-xs-4">{{products[$index + 2]}}</div>
+</div> -->
+
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.1.1 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Angular Fullstack v2.1.1 | <a href="https://github.com/dyosh">dyosh</a></p>
   </div>
 </footer>
